<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_ticket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AskTicket">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayout"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_pesanan"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/title_list_ticket"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_button"
            android:background="@drawable/ic_baseline_playlist_add_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@id/swipe_refresh"
            app:layout_constraintEnd_toEndOf="@id/swipe_refresh" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_pesanan">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_tiket_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:listitem="@layout/recycle_adapter_tiket" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        app:itemIconTint="@color/White"
        app:itemTextColor="@drawable/selector"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_gravity="center|bottom"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation" />
</FrameLayout>