<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search" />
    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="Booking List" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="Profile"/>

    <item
        android:id="@+id/navigation_ticket"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="Ask Ticket"/>

</menu>