...
    <string name="title_activity_search_adapter">SearchAdapter</string>
    <string name="hello_world">Hello Square World!</string>

    <string name="title_list_booked">List Booking</string>
    <string name="title_list_ticket">Ask Us</string>
    <string name="tambah_pesanan">Pesan Sekarang</string>
    <string name="add">Add</string>
    <string name="update">Update Booking</string>
    <string name="update_tiket">Update Tiket</string>
    <string name="add_book">Tambah Booking</string>
    <string name="add_ticket">Tambah Ticket</string>
    <string name="inp_nama">Input Nama</string>
    <string name="inp_address">Input Alamat</string>
...
